RM-8229 Update min-width calculation for BocBooleanValue and BocCheckBox to prevent border overlap.

--- a/Remotion/ObjectBinding/Web/Res/Themes/NovaViso/HTML/BocBooleanValue.css
+++ b/Remotion/ObjectBinding/Web/Res/Themes/NovaViso/HTML/BocBooleanValue.css
@@ -8,6 +8,7 @@
   border-radius: var(--remotion-themed-border-radius);
   box-sizing: border-box;
   vertical-align: middle;
+  min-width: min-content;
 }
 
 .bocBooleanValue span[role=checkbox]
@@ -47,7 +48,6 @@
 .bocBooleanValue.readOnly span.description[hidden]
 {
   display: inline;
-  overflow: hidden;
   width: 0;
   padding-left: var(--remotion-themed-spacing-large);
 }
